fix(table): update spacing for table header and filtering story

--- a/css/src/components/grid.css
+++ b/css/src/components/grid.css
@@ -191,7 +191,6 @@
 
 .Grid-cell--head {
   overflow: hidden;
-  padding-right: var(--spacing-m);
 }
 
 .Grid-cell--dragged {
@@ -449,7 +448,7 @@
 
 .Header {
   background: var(--white);
-  padding: var(--spacing-l);
+  padding: var(--spacing-l) var(--spacing) var(--spacing) var(--spacing-l);
   border-bottom: var(--border);
 }
 
